; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mbedtls/port/esp32/extr_aes.c_esp_aes_xts_decode_keys.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mbedtls/port/esp32/extr_aes.c_esp_aes_xts_decode_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MBEDTLS_ERR_AES_INVALID_KEY_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8**, i32*, i8**, i32*)* @esp_aes_xts_decode_keys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @esp_aes_xts_decode_keys(i8* %0, i32 %1, i8** %2, i32* %3, i8** %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8** %2, i8*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i8** %4, i8*** %12, align 8
  store i32* %5, i32** %13, align 8
  %16 = load i32, i32* %9, align 4
  %17 = udiv i32 %16, 2
  store i32 %17, i32* %14, align 4
  %18 = load i32, i32* %14, align 4
  %19 = udiv i32 %18, 8
  store i32 %19, i32* %15, align 4
  %20 = load i32, i32* %9, align 4
  switch i32 %20, label %23 [
    i32 256, label %21
    i32 512, label %22
  ]

21:                                               ; preds = %6
  br label %25

22:                                               ; preds = %6
  br label %25

23:                                               ; preds = %6
  %24 = load i32, i32* @MBEDTLS_ERR_AES_INVALID_KEY_LENGTH, align 4
  store i32 %24, i32* %7, align 4
  br label %38

25:                                               ; preds = %22, %21
  %26 = load i32, i32* %14, align 4
  %27 = load i32*, i32** %11, align 8
  store i32 %26, i32* %27, align 4
  %28 = load i32, i32* %14, align 4
  %29 = load i32*, i32** %13, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i8*, i8** %8, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 0
  %32 = load i8**, i8*** %10, align 8
  store i8* %31, i8** %32, align 8
  %33 = load i8*, i8** %8, align 8
  %34 = load i32, i32* %15, align 4
  %35 = zext i32 %34 to i64
  %36 = getelementptr inbounds i8, i8* %33, i64 %35
  %37 = load i8**, i8*** %12, align 8
  store i8* %36, i8** %37, align 8
  store i32 0, i32* %7, align 4
  br label %38

38:                                               ; preds = %25, %23
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
